Version 0.3.1Ae2

- Fixed multimple MNs file requests.
- New network hashrate formula.
- ProtocolLine(18) activated.

Version 0.3.1Ae1

- Official release

Version 0.3.1Ad8

- Turbo update headers.
- NSLTIME implemented.
- LBDiff added to nodestatus.

Version 0.3.1Ad7

- Official release

Version 0.3.1Ad6

- Update recent headers instead download complete file.
- Nodestatus improved.

Version 0.3.1Ad5

- Official release

Version 0.3.1Ad4

- Fixed post-dated transfers propagation.
- NSLBALANCE protocol available. (returns address available)
- New seed node: 107.172.193.176
- New seed node: 107.175.194.151
- New seed node: 192.210.226.118
- Removed old seed nodes.
- Added GetWebSeedNodes.
- Removed unit Poolmanage.
- BlockHeader.Difficult := PoSCount
- BlockHeader.NxtBlkDiff := MNsCount

Version 0.3.1Ad3

- Official release

Version 0.3.1Ad2

- Fixed netrate calculation.
- Fixed error using a different MN port.
- MN_IP auto modified when auto is selected.

Version 0.3.1Ad1

- Auto MNs IP assign.
- Slots array is thread safe.
- Removed all TFILESTREAM and FINALLY.
- Node test improved.
- Master node earnings report implemented.
- Node Context.data assigned including the slot number.
- Code cleaned.
- Mainform size and position saved.

Version 0.3.0Aa6

- MNs reports creation and propagation.

Version 0.3.0Aa5

- Nethashrate function&command implemented.
- Datapanel: target deprecated.
- ** BlockHeader.difficult is now PoS addresses paid.
- ** BlockHeader.NextBlkDiff is now MNs addresses paid.
- Command "sumary" improved.
- All pool relative commands deprecated.
- Updated mainmenu.
- Removed Form pool.
- Protocol "$NEWBL" deprecated.
- Improved function "ShowBlchHead".
- Improved network synchronization.
- Fixed "MINE" ammount on user transaction history.
- Added MyConStatus=3 filter to build new blocks
- Implemented besthash tracking and update.
- Developed IsAllSynced function.
- Download headers protocol improved.

Up to Version 0.3.0Aa4
