@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 957
+  Left = 642
   Height = 560
-  Top = 156
+  Top = 157
   Width = 400
   Caption = 'Noso'
   ClientHeight = 540
@@ -1061,9 +1061,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabNodeOptions
+        ActivePage = TabSheet1
         Align = alClient
-        TabIndex = 1
+        TabIndex = 0
         TabOrder = 0
         object TabSheet1: TTabSheet
           Caption = 'Wallet'
@@ -2296,9 +2296,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabNodes
+        ActivePage = TabSheet7
         Align = alClient
-        TabIndex = 4
+        TabIndex = 0
         TabOrder = 0
         object TabSheet7: TTabSheet
           Caption = 'Log'
